; ModuleID = '/home/carl/AnghaBench/linux/fs/xfs/extr_xfs_aops.c_xfs_ioend_merge_append_transactions.c'
source_filename = "/home/carl/AnghaBench/linux/fs/xfs/extr_xfs_aops.c_xfs_ioend_merge_append_transactions.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.xfs_ioend = type { i32* }

@ECANCELED = common dso_local global i32 0, align 4
@llvm.used = appending global [1 x i8*] [i8* bitcast (void (%struct.xfs_ioend*, %struct.xfs_ioend*)* @xfs_ioend_merge_append_transactions to i8*)], section "llvm.metadata"

; Function Attrs: noinline nounwind optnone uwtable
define internal void @xfs_ioend_merge_append_transactions(%struct.xfs_ioend* %0, %struct.xfs_ioend* %1) #0 {
  %3 = alloca %struct.xfs_ioend*, align 8
  %4 = alloca %struct.xfs_ioend*, align 8
  store %struct.xfs_ioend* %0, %struct.xfs_ioend** %3, align 8
  store %struct.xfs_ioend* %1, %struct.xfs_ioend** %4, align 8
  %5 = load %struct.xfs_ioend*, %struct.xfs_ioend** %3, align 8
  %6 = getelementptr inbounds %struct.xfs_ioend, %struct.xfs_ioend* %5, i32 0, i32 0
  %7 = load i32*, i32** %6, align 8
  %8 = icmp ne i32* %7, null
  br i1 %8, label %17, label %9

9:                                                ; preds = %2
  %10 = load %struct.xfs_ioend*, %struct.xfs_ioend** %4, align 8
  %11 = getelementptr inbounds %struct.xfs_ioend, %struct.xfs_ioend* %10, i32 0, i32 0
  %12 = load i32*, i32** %11, align 8
  %13 = load %struct.xfs_ioend*, %struct.xfs_ioend** %3, align 8
  %14 = getelementptr inbounds %struct.xfs_ioend, %struct.xfs_ioend* %13, i32 0, i32 0
  store i32* %12, i32** %14, align 8
  %15 = load %struct.xfs_ioend*, %struct.xfs_ioend** %4, align 8
  %16 = getelementptr inbounds %struct.xfs_ioend, %struct.xfs_ioend* %15, i32 0, i32 0
  store i32* null, i32** %16, align 8
  br label %22

17:                                               ; preds = %2
  %18 = load %struct.xfs_ioend*, %struct.xfs_ioend** %4, align 8
  %19 = load i32, i32* @ECANCELED, align 4
  %20 = sub nsw i32 0, %19
  %21 = call i32 @xfs_setfilesize_ioend(%struct.xfs_ioend* %18, i32 %20)
  br label %22

22:                                               ; preds = %17, %9
  ret void
}

declare dso_local i32 @xfs_setfilesize_ioend(%struct.xfs_ioend*, i32) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
